--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+</html>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,11 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <script>
-      const heading = document.createElement("h1");
-      heading.innerHTML = "hello from js";
-      const root = document.getElementById("root");
-      root.appendChild(heading);
-    </script>
-  </body>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  </body>  
+
+  
 </html>
