--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-</html>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,9 +7,18 @@
   </head>
   <body>
     <div id="root"></div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  </body>  
-
-  
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
+    <script>
+      const heading = React.createElement("h1", {}, "Hello from React");
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+    </script>
+  </body>
 </html>
+s
