--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>namste React</title>
+    <title>Namaste React</title>
   </head>
   <body>
     <div id="root"></div>
+
     <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
@@ -15,9 +17,6 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
-    <script>
-      const heading = React.createElement("h1", {}, "Hello from React");
-      const root = ReactDOM.createRoot(document.getElementById("root"));
-    </script>
+    <script src="App.js"></script>
   </body>
 </html>
